<resources>
<string name="app_name">Calculadora</string>

<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>
<string name="mensaje">Resultado</string>
<string name="boton">Cargar</string>
<string name="check">CheckBox</string>
<string name="numero1">Número1:  </string>
<string name="numero2">Número2:  </string>
<string name="hNombre">Digíte un número</string>
<string name="suma">Suma</string>
<string name="resta">Resta</string>
<string name="multiplicacion">Multiplicación</string>
<string name="division">División</string>


</resources>
