<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero1"
                android:textSize="28dp"
                android:textColor="@color/blue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eNombre1"
                android:hint="@string/hNombre"
                android:textSize="28dp"
                android:inputType="number"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero2"
                android:textSize="28dp"
                android:textColor="@color/blue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eNombre2"
                android:hint="@string/hNombre"
                android:textSize="28dp"
                android:inputType="number"/>

        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bCargar"
            android:text="@string/boton"
            android:textSize="28dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tNombre"
            android:text="@string/mensaje"
            android:textSize="28dp"/>

</LinearLayout>